BUGFIX #11: Align masthead content left Flexbox settings distributed mastead content in a device-dependent way Return to left-aligning all masthead content excluding social widgets Also bodged error introduced due to line-height settings.

--- a/catch-base-pro/style.css
+++ b/catch-base-pro/style.css
@@ -580,12 +580,14 @@ ul#menu-main-menu {
 }
 
 #masthead {
+	line-height: 0;
   width: 100%;
   background: #FFF;
   z-index: 130;
 }
 
 #masthead .sidebar-header-right {
+	margin-left: auto;
   padding: 0;
   padding-right: 2vw;
 }
@@ -593,7 +595,6 @@ ul#menu-main-menu {
 #masthead .wrapper {
 	height: 100%;
 	display: flex;
-	justify-content: space-between;
 	align-items: center;
 }
 
